--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,10 +8,7 @@
     "ios": "expo start --ios",
     "web": "expo start --web",
     "build": "expo export --platform web",
-    "build:vercel": "expo export --platform web && mv dist/* .",
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage"
+    "build:vercel": "expo export --platform web && mv dist/* ."
   },
   "dependencies": {
     "@expo/metro-runtime": "~5.0.4",
@@ -30,8 +27,8 @@
     "expo-image-picker": "^16.1.4",
     "expo-status-bar": "~2.2.3",
     "nativewind": "^4.1.23",
-    "react": "19.0.0",
-    "react-dom": "19.0.0",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
     "react-native": "0.79.4",
     "react-native-image-picker": "^8.2.1",
     "react-native-reanimated": "~3.17.4",
@@ -44,11 +41,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "tailwindcss": "^3.4.17",
-    "@testing-library/react-native": "^12.4.2",
-    "@testing-library/jest-native": "^5.4.3",
-    "jest": "^29.7.0",
-    "jest-expo": "^50.0.1"
+    "tailwindcss": "^3.4.17"
   },
   "private": true
 }
