--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "@tiptap/react": "^2.25.0",
     "@tiptap/starter-kit": "^2.25.0",
     "expo": "~53.0.12",
+    "expo-analytics": "^1.0.18",
     "expo-file-system": "^18.1.11",
     "expo-image-picker": "^16.1.4",
     "expo-status-bar": "~2.2.3",
