Add independent URL routes for Terms of Service and Privacy Policy - Paddle compliance

--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -12,6 +12,14 @@
   ],
   "rewrites": [
     {
+      "source": "/terms-of-service",
+      "destination": "/index.html"
+    },
+    {
+      "source": "/privacy-policy", 
+      "destination": "/index.html"
+    },
+    {
       "source": "/(.*)",
       "destination": "/index.html"
     }
