--- a/backend/package.json
+++ b/backend/package.json
@@ -25,6 +25,7 @@
     "npm": ">=8.0.0"
   },
   "dependencies": {
+    "@sentry/node": "^9.43.0",
     "bcryptjs": "^2.4.3",
     "cloudinary": "^1.41.3",
     "cors": "^2.8.5",
