--- a/backend/package.json
+++ b/backend/package.json
@@ -35,6 +35,7 @@
     "multer": "^2.0.1",
     "multer-storage-cloudinary": "^4.0.0",
     "node-fetch": "^3.3.2",
+    "performance-now": "^2.1.0",
     "pg": "^8.16.3",
     "stripe": "^18.3.0"
   },
