--- a/frontend/package.json
+++ b/frontend/package.json
@@ -38,7 +38,8 @@
     "react-native-svg": "15.11.2",
     "react-native-web": "^0.20.0",
     "react-native-webview": "^13.15.0",
-    "tiptap-extension-resize-image": "^1.2.2"
+    "tiptap-extension-resize-image": "^1.2.2",
+    "web-vitals": "^5.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
